[metadata]
name = message-queue-engi
version = 0.0.2
author = Christopher Kelly
author_email = christopherkelly@engi.network
description = Library for creating and using AWS SNS → SQS fanouts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/engi-network/engi-message-queue
project_urls =
    Bug Tracker = https://github.com/engi-network/engi-message-queue/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    boto3[crt]>=1.24.59
    coloredlogs>=15.0.1
    celery[sqs]>=5.2.7

[options.packages.find]
where = src